feature(dashboard): 优化
