# docs/swagger.json
@@ -156,11 +156,11 @@
         "app.Response": {
             "type": "object",
             "properties": {
+                "code": {
+                    "type": "integer"
+                },
                 "data": {
                     "type": "object"
-                },
-                "eventCode": {
-                    "type": "integer"
                 },
                 "resMsg": {
                     "type": "object"
